Pending changes exported from your codespace

--- a/exercises/08-relative-vs-absolute-path/index.html
+++ b/exercises/08-relative-vs-absolute-path/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<!-- You should modify the value of the src. (Change this relative path to an absolute path) -->
-		<img src="../../.learn/assets/absolute-path-vs-relative-path.png" alt="" />
+		<!-- <img src="../../.learn/assets/absolute-path-vs-relative-path.png" alt="" /> -->
+		<img src="https://studious-space-cod-p4w9jj7gg7j366p7-3000.app.github.dev/.learn/assets/absolute-path-vs-relative-path.png" alt="" />
 	</body>
 </html>
