--- a/exercises/13-image-with-text/index.html
+++ b/exercises/13-image-with-text/index.html
@@ -5,6 +5,16 @@
 	</head>
 	<body>
 		<!-- your code here -->
-		
+		<table border="0">
+			<tr>
+				<td width="25%">
+					<img width="100%" src="../../.learn/assets/13-images-with-text.jpg" />
+				</td>
+				<td valign="top">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit unde inventore alias culpa ut doloribus nostrum amet? Quo eos
+					temporibus ratione fugiat, minus, cupiditate nulla vitae sint quibusdam sit ducimus.
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
